[tool.poetry]
name = "recommender"
version = "0.1.0"
description = ""
authors = ["Simon Hawe <simon.hawe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.1"
numpy = "^1.17"
dash = "^1.3"
plotly = "^4.1"
matplotlib = "^3.1"
scikit-learn = "^0.21.3"
cached-property = "^1.5"
tensorflow = "^1.14"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
